Wrote Related Work: Distance Between Objects

--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -158,8 +158,73 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
 αποτελούν γενίκευση της οριοθετικής κάψουλας. 
   
 \subsection{Απόσταση Δύο Αντικειμένων}
-% Ο ορισμός του προβλήματος υπολογισμού της Ευκλείδειας απόστασης δύο αντικειμένων 
-% έχει δοθεί στο \ref{sec:problem_description}.
+Η Ευκλείδεια απόσταση δύο αντικειμένων ορίζεται ως \textit{"το μήκος του 
+μικρότερου ευθυγράμμου τμήματος που ενώνει τα δύο αντικείμενα"}. 
+
+Στη βιβλιογραφία αλγόριθμοι που υπολογίζουν απευθείας την απόσταση δύο αντικειμένων 
+επικεντρώνονται σε κυρτά αντικείμενα.
+Έστω $M = M_1 + M_2$ είναι το σύνολο των κορυφών και των δύο 
+αντικειμένων,
+για την περίπτωση των δύο διαστάσεων στο 
+\cite{schwartz1981finding} δίνεται ένας αλγόριθμος $\bigO(log^2M)$, 
+ενώ στα \cite{edelsbrunner1985computing} 
+και \cite{chin1983optimal} δίνονται αλγόριθμοι $\bigO(logM)$ 
+για τον υπολογισμό της απόστασης κυρτών πολυγώνων.
+Για την περίπτωση των τριών διαστάσεων η απόσταση δύο κυρτών πολυέδρων 
+υπολογίζεται στο \cite{dobkin1985linear} σε $\bigO(M)$.
+Στο \cite{bobrow1989direct} ο ίδιος υπολογισμός γίνεται με την
+αναγωγή του προβλήματος σε πρόβλημα ελαχιστοποίησης 
+μη γραμμικής συνάρτησης υπό περιορισμούς.
+Στις προηγούμενες δημοσιεύσεις δίνεται περισσότερη έμφαση 
+στην ασυμπτωτική ανάλυση των αλγορίθμων και δεν είναι ξεκάθαρο 
+αν οι αλγόριθμοι είναι αποδοτικοί για πρακτικά προβλήματα όπου το 
+$M$ δεν είναι υπερβολικά μεγάλο (για παράδειγμα για την απόσταση 
+μεταξύ τριγώνων είναι $M = 6$).
+Όλοι οι παραπάνω θεωρητικοί αλγόριθμοι κρύβουν άγνωστες, και πιθανόν, 
+μεγάλες σταθερές πολυπλοκότητας χρόνου. 
+Δυστυχώς, ελάχιστα, έως καθόλου, υπολογιστικά πειράματα έχουν γίνει.
+Τέλος, στο \cite{gilbert1988fast} περιγράφεται ένας αποδοτικός αλγόριθμος 
+για το ίδιο πρόβλημα, γνωστός ως \tl{GJK (Gilbert-Johnson-Keerthi)}.
+Ο αλγόριθμος αυτός είναι ο πλέον διαδεδομένος σε εφαρμογές 
+υπολογισμού αποστάσεων και ανίχνευσης σύγκρουσης, καθώς είναι αξιόπιστος 
+και αποδοτικός ειδικά για τις τρεις διαστάσεις.
+Το υπολογιστικό του κόστος είναι γραμμικό σε σχέση με το πλήθος των κορυφών,
+$\bigO(M)$, με μικρό συντελεστή πολυπλοκότητας, σύμφωνα με τα πειράματα που 
+έχουν γίνει. 
+
+Σε πραγματικές εφαρμογές, τα αντικείμενα συνήθως δεν είναι κυρτά.
+Για τον υπολογισμό της απόστασης μεταξύ μη-κυρτών αντικειμένων, 
+μπορούμε να διαχωρίσουμε τα αντικείμενα σε κυρτά μέρη και 
+στη συνέχεια να χρησιμοποιήσουμε οποιονδήποτε από τους παραπάνω
+αλγορίθμους.
+Τότε, η απόσταση μεταξύ των δύο αντικειμένων είναι η μικρότερη απόσταση 
+μεταξύ οποιουδήποτε ζεύγους κυρτών περιοχών. 
+Ωστόσο, μια απλοϊκή υλοποίηση που εξετάζει όλα αυτά τα ζεύγη έχει 
+πολυπλοκότητα $\bigO(n*m)$, όπου $n$ και $m$ είναι οι αριθμοί των 
+κυρτών περιοχών του κάθε αντικειμένου.
+
+Για να επιταχυνθεί η αναζήτηση έχουν χρησιμοποιηθεί ιεραρχίες οριοθετικών όγκων
+\begin{itemize}
+    \item με οριοθετικές σφαίρες \cite{quinlan1994efficient},
+    \item με προσανατολισμένα οριοθετικά πλαίσια \cite{johnson1998framework},
+    \item με οριοθετικές κάψουλες \cite{larsen1999fast}.
+\end{itemize}
+
+Ξεκινώντας με δύο ιεραρχίες οριοθετικών όγκων, μια για κάθε αντικείμενο αντίστοιχα, 
+οι ιεραρχίες διασχίζονται αναδρομικά.
+Κατά τη διάσχιση, ζεύγη οριοθετικών όγκων ελέγχονται για να καθοριστεί εάν 
+η τρέχουσα εκτίμηση της ελάχιστης απόστασης μπορεί να βελτιωθεί. 
+Στην περίπτωση που δεν μπορεί να βελτιωθεί, τότε τα αντίστοιχα υποδέντρα 
+κλαδεύονται (\tl{pruning}) και δεν απαιτούνται περαιτέρω έλεγχοι.
+Στην αντίθετη περίπτωση η διάσχιση των δέντρων πρέπει να συνεχιστεί.
+Όταν η αναζήτηση φτάσει στα φύλλα των δέντρων, τότε γίνονται οι 
+έλεγχοι στοιχείο - προς - στοιχείο οι οποίοι συνήθως είναι πιο 
+ακριβοί υπολογιστικά από τους ελέγχους μεταξύ οριοθετικών όγκων.
+
+Το ίδιο πλαίσιο εργασίας ακολουθεί και η μεθοδολογία που προτείνουμε, 
+δηλαδή κατασκευάζουμε μια ιεραρχία οριοθετικών όγκων και υλοποιούμε 
+αλγορίθμους που προσπαθούν να μειώσουν τον χώρο αναζήτησης.
+
 
 % Απόσταση Δύο Πολυγωνικών Πλεγμάτων
 % Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
