--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -5,17 +5,6 @@
   institution={Technical Report TR99-018, Department of Computer Science, University of~…}
 }
 
-@article{gilbert1988fast,
-  title={A fast procedure for computing the distance between complex objects in three-dimensional space},
-  author={Gilbert, Elmer G and Johnson, Daniel W and Keerthi, S Sathiya},
-  journal={IEEE Journal on Robotics and Automation},
-  volume={4},
-  number={2},
-  pages={193--203},
-  year={1988},
-  publisher={IEEE}
-}
-
 @article{heidrichcomputing,
   title={Computing the Barycentric Coordinates of a Projected Point (Preprint of an Article in the Journal of Graphics Tools)},
   author={Heidrich, Wolfgang}
@@ -289,3 +278,81 @@
   year={1996},
   publisher={Technical Report TR96-024, Department of Computer Science, UNC Chapel Hill}
 }
+
+@article{chin1983optimal,
+  title={Optimal algorithms for the intersection and the minimum distance problems between planar polygons},
+  author={Chin, Francis and Wang, Cao An},
+  journal={IEEE Transactions on Computers},
+  volume={32},
+  number={12},
+  pages={1203--1207},
+  year={1983},
+  publisher={IEEE Computer Society}
+}
+
+@article{edelsbrunner1985computing,
+  title={Computing the extreme distances between two convex polygons},
+  author={Edelsbrunner, Herbert},
+  journal={Journal of Algorithms},
+  volume={6},
+  number={2},
+  pages={213--224},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{lumelsky1985fast,
+  title={On fast computation of distance between line segments},
+  author={Lumelsky, Vladimir J},
+  journal={Information Processing Letters},
+  volume={21},
+  number={2},
+  pages={55--61},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{gilbert1988fast,
+  title={A fast procedure for computing the distance between complex objects in three-dimensional space},
+  author={Gilbert, Elmer G and Johnson, Daniel W and Keerthi, S Sathiya},
+  journal={IEEE Journal on Robotics and Automation},
+  volume={4},
+  number={2},
+  pages={193--203},
+  year={1988},
+  publisher={IEEE}
+}
+
+@article{schwartz1981finding,
+  title={Finding the minimum distance between two convex polygons},
+  author={Schwartz, Jacob T},
+  journal={Information Processing Letters},
+  volume={13},
+  number={4-5},
+  pages={168--170},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@article{dobkin1985linear,
+  title={A linear algorithm for determining the separation of convex polyhedra},
+  author={Dobkin, David P and Kirkpatrick, David G},
+  journal={Journal of algorithms},
+  volume={6},
+  number={3},
+  pages={381--392},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{bobrow1989direct,
+  title={A direct minimization approach for obtaining the distance between convex polyhedra},
+  author={Bobrow, James E},
+  journal={The International Journal of Robotics Research},
+  volume={8},
+  number={3},
+  pages={65--76},
+  year={1989},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
