Wrote about Exhaustive Algorithms

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -2,7 +2,7 @@
 \label{ch:experiments}
 
 \section{Σύγκριση Σχετικού Κόστους των Πράξεων μεταξύ Στοιχειωδών Γεωμετρικών Οντοτήτων}
-
+\label{sec:geom_tests_cost}
 \section{Κατασκευή Δεδομένων Ελέγχου}
 
 \section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
