--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -356,4 +356,26 @@
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
 
+@article{hoare1961algorithm,
+  title={Algorithm 65: find},
+  author={Hoare, Charles AR},
+  journal={Communications of the ACM},
+  volume={4},
+  number={7},
+  pages={321--322},
+  year={1961},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{bentley1980general,
+  title={A general method for solving divide-and-conquer recurrences},
+  author={Bentley, Jon Louis and Haken, Dorothea and Saxe, James B},
+  journal={ACM SIGACT News},
+  volume={12},
+  number={3},
+  pages={36--44},
+  year={1980},
+  publisher={ACM New York, NY, USA}
+}
+
 
