--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -672,9 +672,9 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
     παιδί και έπειτα στο δεξί.
     \item[γραμμές 16-21] Πρώτα γίνεται αναζήτηση στο δεξί 
     παιδί και έπειτα στο αριστερό.
-    \item[γραμμές 11,19] Ελέγχουν αν είναι απαραίτητη 
+    \item[γραμμές 11,19] Έλεγχος για το αν είναι απαραίτητη 
     η επίσκεψη στο παιδί που δεν επιλέχθηκε προηγουμένως.
-    \item[γραμμές 8,16] Επιτρέπουν πρόωρο τερματισμό της 
+    \item[γραμμές 8,16] Πρόωρο τερματισμό της 
     αναζήτησης (\tl{early exit}). 
     Αυτό είναι χρήσιμο όταν ένας κόμβος δεν μπορεί να 
     απορριφθεί κατά την αναζήτηση, όμως μπορούν να 
