Wrote about Triangle-Triangle routine

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -23,17 +23,65 @@
 \section{Στοιχειώδεις Γεωμετρικές Πράξεις}
 \subsection{Ευκλείδεια Απόσταση δύο Τριγώνων}
 \label{subsec:tria_distance}
-% Έστω τα τρίγωνα $P$ και $Q$ στον $\mathbb{R}^3$.
-% Η Ευκλείδεια απόσταση $d(P,Q)$ μεταξύ των τριγώνων $P$ και $Q$
-% ορίζεται ως:
-% \[ d(P,Q) = \min_{p \in P, q \in Q} |p - q| \]
-% όπου με $|p-q|$ συμβολίζεται η Ευκλείδεια απόσταση των σημείων 
-% $p$ και $q$.
+Η Ευκλείδεια απόσταση $d(P,Q)$ μεταξύ δύο τριγώνων $P$ και $Q$
+ορίζεται ως:
+\[ d(P,Q) = \min_{p \in P, q \in Q} \lVert p - q \rVert \]
+όπου με $\lVert p - q \rVert$ συμβολίζεται η Ευκλείδεια 
+απόσταση των σημείων $p$ και $q$.
 
-% Έστω p,q
+Για τον υπολογισμό της απόστασης δύο τριγώνων του τρισδιάστατου χώρου 
+χρησιμοποιούμε τη ρουτίνα \tl{\texttt{TriDist()}} από το πακέτο 
+\tl{\textit{PQP}} \cite{larsen2014pqp} \cite{larsen1999fast}. 
 
-\subsubsection{Ευκλείδεια Απόσταση δύο Ευθυγράμμων Τμημάτων}
-\subsubsection{Ευκλείδεια Απόσταση Σημείου και Τριγώνου}
+Μια σύντομη περιγραφή της ρουτίνας είναι η ακόλουθη: 
+Αρχικά υπολογίζονται οι αποστάσεις κάθε ζεύγους πλευρών,
+δηλαδή 9 συνδυασμοί. 
+Ο υπολογισμός της απόστασης ευθυγράμμων τμημάτων 
+περιγράφεται στο \cite{lumelsky1985fast}.
+Έστω $p$, $q$ είναι τα σημεία με τη μικρότερη απόσταση 
+για κάποιο ζεύγος πλευρών.
+Το διάνυσμα $\vec{pq}$ ορίζει μια πλάκα (ένα επίπεδο 
+κάθετο στο $\vec{pq}$ που διέρχεται από το $p$ και 
+ένα επίπεδο κάθετο στο $\vec{pq}$ που διέρχεται
+από το $q$).
+Αν η τρίτη κορυφή του κάθε τριγώνου (αυτή που δεν ανήκει 
+στην πλευρά που εξετάζεται) είναι εκτός της πλάκας, τότε 
+τα $p$, $q$ είναι τα κοντινότερα σημεία των δύο τριγώνων
+και η ρουτίνα τερματίζει.
+Ταυτόχρονα με αυτούς τους ελέγχους, η ρουτίνα εξετάζει 
+αν τα τρίγωνα είναι μη-επικαλυπτόμενα.
+Ακόμη και αν αποτύχουν οι παραπάνω έλεγχοι, η ρουτίνα 
+αποθηκεύει τη μικρότερη απόσταση που υπολογίστηκε.
+Στην περίπτωση που δε βρέθηκε ζεύγος πλευρών με τις τρίτες 
+κορυφές εκτός της πλάκας, θα πρέπει να ισχύει ένα από τα 
+παρακάτω:
+\begin{enumerate}
+    \item Το ένα από τα κοντινότερα σημεία είναι κορυφή του 
+    ενός τριγώνου και το άλλο βρίσκεται σε εσωτερικό σημείο 
+    του άλλου τριγώνου.
+    \item Τα τρίγωνα συγκρούονται, οπότε η απόσταση είναι 0.
+    \item Μια πλευρά του ενός τριγώνου είναι παράλληλη στο 
+    επίπεδο του άλλου τριγώνου. 
+    Τότε, οι παραπάνω 9 έλεγχοι πλευρών περιέχουν τα κοντινότερα 
+    σημεία.
+    \item Ένα ή και τα δύο τρίγωνα είναι εκφυλισμένα. 
+    Τότε, πάλι, οι παραπάνω 9 έλεγχοι περιέχουν τα κοντινότερα 
+    σημεία.
+\end{enumerate}
+
+Πρώτα εξετάζεται η περίπτωση 1: 
+Προβάλλονται οι κορυφές του ενός τριγώνου στο επίπεδο του 
+άλλου. 
+Αν οι τρεις κορυφές βρίσκονται από την ίδια μεριά του επιπέδου
+η ρουτίνα βρίσκει την κορυφή με τη μικρότερη προβολή και επίσης 
+σημειώνει πως τα τρίγωνα είναι μη-επικαλυπτόμενα.
+Για την κορυφή με τη μικρότερη προβολή, εξετάζεται αν το προβαλλόμενο
+σημείο είναι εντός του άλλου τριγώνου. 
+Αν ισχύει αυτό, τότε αυτή είναι η απόσταση των τριγώνων και η 
+ρουτίνα τερματίζει.
+Η ίδια διαδικασία επαναλαμβάνεται και για τις κορυφές του άλλου τριγώνου.
+Αν δεν ισχύει η πρώτη περίπτωση, τότε αν τα τρίγωνα βρέθηκαν να είναι 
+μη-επικαλυπτόμενα ισχύουν οι περιπτώσεις 3,4 αλλιώς η περίπτωση 2.
 
 \subsection{Γεωμετρικές Πράξεις για \tl{AABB}}
 Ένα οριοθετικό πλαίσιο ευθυγραμμισμένο με τους άξονες (\tl{AABB})
