Added a forgotten paragraph on parallel queries

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -1058,11 +1058,12 @@ $v + 2*\lceil n_v/2 \rceil$.
 για την παράλληλη κατασκευή του \tl{sKD-Tree} και την παράλληλη 
 εκτέλεση ερωτημάτων.
 
-Η κατασκευή του αριστερού και του δεξιού παιδιού ενός κόμβου
-είναι  δύο ανεξάρτητες εργασίες, επομένως καλούμε 
-ένα \tl{thread} για την κατασκευή του αριστερού παιδιού 
-ενώ η κατασκευή του δεξιού παιδιού συνεχίζεται στο 
-τρέχουν \tl{thread}.
+Στον αλγόριθμο \ref{alg:tree_construction_recursive} 
+η κατασκευή του αριστερού και του δεξιού παιδιού ενός κόμβου
+είναι  δύο ανεξάρτητες εργασίες.
+Επομένως, καλούμε ένα \tl{thread} για την κατασκευή του 
+αριστερού παιδιού ενώ η κατασκευή του δεξιού παιδιού συνεχίζεται 
+στο τρέχουν \tl{thread}.
 Πριν τη συνένωση των \tl{AABB} των δύο παιδιών θα πρέπει 
 το \tl{thread} που δημιουργήθηκε να ολοκληρώσει την εργασία 
 του. 
@@ -1075,6 +1076,15 @@ $v + 2*\lceil n_v/2 \rceil$.
 $nthreads \geq 2^{depth-1}$, όπου $depth$ είναι το βάθος του 
 κόμβου που κατασκευάζεται.
 Σε διαφορετική περίπτωση, η κατασκευή γίνεται σειριακά.
+
+Για τη μετατροπή του αλγορίθμου \ref{alg:queries_on_tree} σε 
+παράλληλο, χωρίζουμε το πλήθος των ερωτημάτων ισόποσα σε κάθε 
+νήμα (\tl{thread}). 
+Όμως επειδή η μεταβλητή \tl{\texttt{distance}} συνεχώς αλλάζει
+όταν εντοπίζονται κοντινότεροι γείτονες, για να αποφύγουμε τη 
+χρήση \tl{\textit{lock}}, το κάθε νήμα εκτελεί τις γραμμές 3-9 
+του αλγορίθμου με μια τοπική μεταβλητή \tl{\texttt{local\_distance}}.
+Στο τέλος, επιστρέφεται η μικρότερη από αυτές.
 
 \paragraph{Απλοποίηση Πράξεων}
 Σε όλους τους παραπάνω αλγορίθμους μπορούμε να αντικαταστήσουμε 
