Wrote about Primitive Distance computation Relative Cost

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -1,17 +1,59 @@
 \chapter{Πειράματα και Αποτελέσματα}
 \label{ch:experiments}
+Η εκτέλεση όλων των πειραμάτων που παρουσιάζονται παρακάτω 
+πραγματοποιήθηκε σε πόρους της Ιδρυματικής συστοιχίας του 
+ΑΠΘ "Αριστοτέλης".
+Το μοντέλο επεξεργαστή που χρησιμοποιήθηκε για τα πειράματα 
+είναι \tl{Intel Xeon E5-2630 v4}.
+Η υλοποίηση των αλγορίθμων έγινε στη γλώσσα \tl{"Julia Version
+1.7.2"}. 
 
-\section{Σύγκριση Σχετικού Κόστους των Πράξεων μεταξύ Στοιχειωδών Γεωμετρικών Οντοτήτων}
+
+\section{Κόστος Υπολογισμού Απόστασης Στοιχείων}
 \label{sec:geom_tests_cost}
+Για τον προσδιορισμό του κόστους $C_v$ και $C_p$
+της μετρικής κόστους της ενότητας \ref{sec:cost_metric}
+θεωρήσαμε πως το κόστος υπολογισμού της τετραγωνική απόστασης
+δύο σημείων είναι μονάδα.
+Όλα τα υπόλοιπα κόστη, λοιπόν, υπολογίζονται σε σχέση με το 
+κόστος σημείο-σημείο. 
+Μετρήσαμε τον χρόνο υπολογισμού των τετραγωνικών αποστάσεων 
+περίπου $210\times10^6$ σημείων, \tl{AABB}, ευθυγράμμων τμημάτων 
+και τριγώνων και προέκυψε ο πίνακας \ref{tab:distance_rel_cost} 
+με τα σχετικά κόστη. Επομένως, $C_v=23.5$, $C_p=385.7$.
+
+\begin{table}
+    \centering
+    \begin{tabular}{|c|c|}
+        \hline 
+        Υπολογισμός Απόστασης & Κόστος \\
+        \hline
+        Σημείο-Σημείο & $1$ \\
+        \hline 
+        AABB-AABB & $23.5$ \\
+        \hline
+        Ευθ. Τμήμα - Ευθ. Τμήμα & $129.8$ \\
+        \hline
+        Τρίγωνο-Τρίγωνο & $385.7$ \\
+        \hline
+    \end{tabular}
+    \caption[]{Σχετικό κόστος υπολογισμού της απόστασης διαφόρων στοιχείων}
+    \label{tab:distance_rel_cost}
+\end{table}
+
+
+
 \section{Κατασκευή Δεδομένων Ελέγχου}
+
+\section{Χρόνος Κατασκευής του \tl{sKD-Tree}}
 
 \section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
 
-\section{Χρόνοι Κατασκευής του \tl{sKD-Tree}}
-\subsection{Σειριακή Κατασκευή}
-\subsection{Παράλληλη Κατασκευή}
-
 \section{Συνολικός Χρόνος Εκτέλεσης - Σύγκριση Αλγορίθμων}
+
+\section{Επίδραση της Απόστασης }
+
+% να προσθέσω ποσοστά χρόνου αναζήτησης/κατασκευής
 \subsection{Δύο Αεροπλάνα}
 \subsection{\tl{Scooby} με \tl{Stanford Bunny}}
 \subsection{Δύο Ομοαξονικοί Κύλινδροι}
