--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -378,4 +378,11 @@
   publisher={ACM New York, NY, USA}
 }
 
+@misc{larsen2014pqp,
+  title={PQP-A Proximity Query Package},
+  author={Larsen, E and Gottchalk, S and Lin, M and Manocha, D},
+  year={2014}
+}
+
+
 
