Wrote about Tescase Construction

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -22,7 +22,7 @@
 και τριγώνων και προέκυψε ο πίνακας \ref{tab:distance_rel_cost} 
 με τα σχετικά κόστη. Επομένως, $C_v=23.5$, $C_p=385.7$.
 
-\begin{table}
+\begin{table}[h]
     \centering
     \begin{tabular}{|c|c|}
         \hline 
@@ -41,11 +41,27 @@
     \label{tab:distance_rel_cost}
 \end{table}
 
-
-
 \section{Κατασκευή Δεδομένων Ελέγχου}
+Για την εκτέλεση των πειραμάτων κατασκευάσαμε διάφορα σενάρια.
+Κάθε σενάριο αποτελείται από δύο αντικείμενα και για το κάθε 
+αντικείμενο κατασκευάσαμε τριγωνικά πλέγματα με τρεις διαφορετικές 
+αναλύσεις (διαφορετικό πλήθος τριγώνων).
+Έτσι, για κάθε σενάριο εκτελούμε ερωτήματα εύρεσης της απόστασης 
+των αντικειμένων για κάθε συνδυασμό ανάλυσης (σύνολο 9 μετρήσεις).
+Έγινε προσπάθεια συμπερίληψης διάφορων περιπτώσεων, με αντικείμενα 
+διαφόρων σχημάτων, διαστάσεων και προσανατολισμού.
+
+Η λήψη των αντικειμένων που χρησιμοποιούνται σε αυτή την εργασία 
+έγινε από το \tl{GrabCAD}\cite{GrabCAD} και το \tl{3D Content Central}
+\cite{3dcontentcentral}. 
+Τα αντικείμενα, αρχικά, ήταν σε μορφή \tl{\texttt{IGES}}, ενώ για τη 
+δημιουργία των πλεγμάτων χρησιμοποιήθηκε το πρόγραμμα 
+\tl{BETA CAE SYSTEMS - Ansa v21.0.0}.
+
+% TODO: ADD PHOTOS OF EACH SCENARIO
 
 \section{Χρόνος Κατασκευής του \tl{sKD-Tree}}
+
 
 \section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
 
