--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -384,5 +384,14 @@
   year={2014}
 }
 
+@misc{GrabCAD, 
+  title = {{GrabCAD}},
+  howpublished = {\url{https://grabcad.com/library}},
 
+}
 
+@misc{3dcontentcentral, 
+  title = {{3D Content Central}},
+  howpublished = {\url{https://www.3dcontentcentral.com/}},
+
+}
