Wrote about sKD-Tree building time

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -61,7 +61,20 @@
 % TODO: ADD PHOTOS OF EACH SCENARIO
 
 \section{Χρόνος Κατασκευής του \tl{sKD-Tree}}
+Στο σχήμα \ref{fig:build_time} παρουσιάζονται οι μετρήσεις του 
+χρόνου κατασκευής του \tl{sKD-Tree} συναρτήσει του μεγέθους ενός 
+τριγωνικού πλέγματος και του πλήθους των νημάτων (\tl{threads})
+που χρησιμοποιήθηκαν.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\textwidth]{build_time.pdf}
+    \caption[Χρόνοι Κατασκευής του \tl{sKD-Tree}]{
+        Χρόνος κατασκευής του \tl{sKD-Tree} συναρτήσει 
+        του πλήθους των τριγώνων ενός πλέγματος.
+    }
+    \label{fig:build_time}
+\end{figure}
 
 \section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
 
