added some result files and plots in text

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -76,14 +76,99 @@
     \label{fig:build_time}
 \end{figure}
 
-\section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
+\section{Πειράματα ανά Σενάριο}
+Για κάθε ένα από τα παρακάτω σενάρια, παρουσιάζονται οι 
+μετρήσεις για το κόστος αναζήτησης και το συνολικό χρόνο 
+εκτέλεσης για την απάντηση ερωτημάτων απόστασης.
+Στα διαγράμματα παρακάτω, γίνεται σύγκριση της επίδοσης των αλγορίθμων 
+\ref{alg:queries_on_tree} και \ref{alg:search_on_two_trees}.
 
-\section{Συνολικός Χρόνος Εκτέλεσης - Σύγκριση Αλγορίθμων}
+Το κόστος αναζήτησης υπολογίστηκε από τη μετρική κόστους 
+που περιγράφεται στην ενότητα \ref{sec:cost_metric} 
+μετρώντας τον αριθμό κλήσεων των ρουτινών 
+\tl{\texttt{triangle\_distance()}} και \tl{\texttt{AABB\_distance()}}.
 
-\section{Επίδραση της Απόστασης }
+Ο συνολικός χρόνος εκτέλεσης ερωτημάτων απόστασης περιλαμβάνει 
+το χρόνο προεπεξεργασίας των δεδομένων και τον χρόνο αναζήτησης.
+Η προεπεξεργασία των δεδομένων είναι η κατασκευή ενός ή δύο δέντρων 
+ανάλογα με τον αλγόριθμο που χρησιμοποιείται.
+Οι χρόνοι που παρουσιάζονται αντιστοιχούν σε πειράματα με χρήση 
+ενός, τεσσάρων και οκτώ νημάτων επεξεργασίας.
+
+\subsection{Αεροπλάνα}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_metric/airplanes_cost_metric.pdf}
+    \caption[Κόστος Αναζήτησης για "αεροπλάνα"] {
+        Κόστος αναζήτησης για τη σκηνή "αεροπλάνα" συναρτήσει 
+        του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+\subsection{\tl{Scooby} με \tl{Stanford Bunny}}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_metric/scooby_w_bunny_cost_metric.pdf}
+    \caption[Κόστος Αναζήτησης για "\tl{Scooby} με \tl{Stanford Bunny}"] {
+        Κόστος αναζήτησης για τη σκηνή "\tl{Scooby} με \tl{Stanford Bunny}" συναρτήσει 
+        του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+
+\subsection{Ομοαξονικοί Κύλινδροι}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_metric/cylinders_cost_metric.pdf}
+    \caption[Κόστος Αναζήτησης για "ομοαξονικοί κύλινδροι"] {
+        Κόστος αναζήτησης για τη σκηνή "ομοαξονικοί κύλινδροι" συναρτήσει 
+        του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+\subsection{Αλυσιδωτοί Τόροι}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_metric/chained_tori_cost_metric.pdf}
+    \caption[Κόστος Αναζήτησης για "αλυσιδωτοί τόροι"] {
+        Κόστος αναζήτησης για τη σκηνή "αλυσιδωτοί τόροι" συναρτήσει 
+        του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+\subsection{Συγκρουόμενοι Τόροι}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_metric/colliding_tori_cost_metric.pdf}
+    \caption[Κόστος Αναζήτησης για "συγκρουόμενοι τόροι"] {
+        Κόστος αναζήτησης για τη σκηνή "συγκρουόμενοι τόροι" συναρτήσει 
+        του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+
+\section{Σχέση Απόστασης - Κόστους Αναζήτησης}
+Για το πείραμα αυτό επιλέχθηκαν τα αντικείμενα της σκηνής 
+"\tl{Scooby} με \tl{Stanford Bunny}" με περίπου $20000$ 
+και $16600$ τρίγωνα αντίστοιχα.
+Αρχικά τα αντικείμενα τοποθετούνται έτσι ώστε να υπάρχει 
+σύγκρουση μεταξύ τους.
+Έπειτα μετακινείται το αντικείμενο \tl{Stanford Bunny} 
+προς μια συγκεκριμένη κατεύθυνση ώστε να απομακρύνεται 
+από το αντικείμενο \tl{Scooby}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{cost_vs_distance.pdf}
+    \caption[Κόστος Αναζήτησης Συναρτήσει της Απόστασης"] {
+        Κόστος αναζήτησης συναρτήσει της απόστασης.
+        Η απόσταση είναι κανονικοποιημένη και ίση με 
+        $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική 
+        απόσταση των αντικειμένων και $diagonal$ το μήκος 
+        της διαγωνίου του \tl{AABB} του \tl{Stanford Bunny}.
+    }
+\end{figure}
+
 
 % να προσθέσω ποσοστά χρόνου αναζήτησης/κατασκευής
-\subsection{Δύο Αεροπλάνα}
-\subsection{\tl{Scooby} με \tl{Stanford Bunny}}
-\subsection{Δύο Ομοαξονικοί Κύλινδροι}
-\subsection{Δύο Αεροπλάνα με Ανομοιόμορφο Πλέγμα}
