--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -106,6 +106,15 @@
     }
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{execution_times/airplanes_exec_time.pdf}
+    \caption[Συνολικός Χρόνος Εκτέλεσης για "αεροπλάνα"] {
+        Συνολικός χρόνος εκτέλεσης ερωτήματος απόστασης 
+        για τη σκηνή "αεροπλάνα" συναρτήσει του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
 \subsection{\tl{Scooby} με \tl{Stanford Bunny}}
 \begin{figure}[H]
     \centering
@@ -113,6 +122,15 @@
     \caption[Κόστος Αναζήτησης για "\tl{Scooby} με \tl{Stanford Bunny}"] {
         Κόστος αναζήτησης για τη σκηνή "\tl{Scooby} με \tl{Stanford Bunny}" συναρτήσει 
         του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{execution_times/scooby_w_bunny_exec_time.pdf}
+    \caption[Συνολικός Χρόνος Εκτέλεσης για "\tl{Scooby} με \tl{Stanford Bunny}"] {
+        Συνολικός χρόνος εκτέλεσης ερωτήματος απόστασης 
+        για τη σκηνή "\tl{Scooby} με \tl{Stanford Bunny}" συναρτήσει του μεγέθους των δύο μοντέλων.
     }
 \end{figure}
 
@@ -127,6 +145,16 @@
     }
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{execution_times/cylinders_exec_time.pdf}
+    \caption[Συνολικός Χρόνος Εκτέλεσης για "ομοαξονικοί κύλινδροι"] {
+        Συνολικός χρόνος εκτέλεσης ερωτήματος απόστασης 
+        για τη σκηνή "ομοαξονικοί κύλινδροι" συναρτήσει του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+
 \subsection{Αλυσιδωτοί Τόροι}
 \begin{figure}[H]
     \centering
@@ -137,6 +165,15 @@
     }
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{execution_times/cylinders_exec_time.pdf}
+    \caption[Συνολικός Χρόνος Εκτέλεσης για "ομοαξονικοί κύλινδροι"] {
+        Συνολικός χρόνος εκτέλεσης ερωτήματος απόστασης 
+        για τη σκηνή "ομοαξονικοί κύλινδροι" συναρτήσει του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
 \subsection{Συγκρουόμενοι Τόροι}
 \begin{figure}[H]
     \centering
@@ -144,6 +181,15 @@
     \caption[Κόστος Αναζήτησης για "συγκρουόμενοι τόροι"] {
         Κόστος αναζήτησης για τη σκηνή "συγκρουόμενοι τόροι" συναρτήσει 
         του μεγέθους των δύο μοντέλων.
+    }
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{execution_times/colliding_tori_exec_time.pdf}
+    \caption[Συνολικός Χρόνος Εκτέλεσης για "συγκρουόμενοι τόροι"] {
+        Συνολικός χρόνος εκτέλεσης ερωτήματος απόστασης 
+        για τη σκηνή "συγκρουόμενοι τόροι" συναρτήσει του μεγέθους των δύο μοντέλων.
     }
 \end{figure}
 
