Updated Cost vs. Distance data and plots

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -196,13 +196,12 @@
 
 \section{Σχέση Απόστασης - Κόστους Αναζήτησης}
 Για το πείραμα αυτό επιλέχθηκαν τα αντικείμενα της σκηνής 
-"\tl{Scooby} με \tl{Stanford Bunny}" με περίπου $20000$ 
-και $16600$ τρίγωνα αντίστοιχα.
-Αρχικά τα αντικείμενα τοποθετούνται έτσι ώστε να υπάρχει 
-σύγκρουση μεταξύ τους.
-Έπειτα μετακινείται το αντικείμενο \tl{Stanford Bunny} 
+"Αεροπλάνα" με περίπου $1.5 * 10^6$ τρίγωνα το καθένα.
+Η αρχική θέση των αντικειμένων είναι αυτή που απεικονίζεται 
+στην εικόνα \ref{}.
+Έπειτα μετακινείται το αντικείμενο ένα αεροπλάνο 
 προς μια συγκεκριμένη κατεύθυνση ώστε να απομακρύνεται 
-από το αντικείμενο \tl{Scooby}.
+από το άλλο.
 
 \begin{figure}[H]
     \centering
@@ -212,7 +211,8 @@
         Η απόσταση είναι κανονικοποιημένη και ίση με 
         $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική 
         απόσταση των αντικειμένων και $diagonal$ το μήκος 
-        της διαγωνίου του \tl{AABB} του \tl{Stanford Bunny}.
+        της διαγωνίου του \tl{AABB} του αεροπλάνου.
+        Τα αντικείμενα ανήκουν στη σκηνή "αεροπλάνα".
     }
 \end{figure}
 
